# malloovia

./: .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  requirements_readthedocs.txt  setup.cfg  setup.py  test-pickle.py  tox.ini
docs/: Makefile  about.rst  api.rst  background.rst  cli.rst  conf.py  developers.rst  index.rst  install.rst  make.bat  malloovia.rst  modules.rst  usage.rst  yaml.rst
docs/_static/: custom.css
docs/_templates/: page.html
malloovia/: __init__.py  cli.py  lpsolver.py  malloovia.schema.yaml  model.py  phases.py  problem.schema.yaml  solution.schema.yaml  solution_model.py  util.py
tests/: datapaths.py  test_cli.py  test_hybrid.py  test_malloovia.py  test_schemas.py  test_time_units.py  test_util.py
tests/test_data/invalid/: problem_with_numbers_as_names.yaml  solution_without_problem.yaml
tests/test_data/problems/: problem1.yaml  problem2.yaml  problem3.yaml
tests/test_data/valid/: external_workload.csv  problem_example.yaml  problem_example_external_workload.yaml  problems_plus_solutions_example.yaml  problems_plus_solutions_with_allocation.yaml  solution_example.yaml  solution_with_full_phase_I_allocation.yaml
